--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "parcel ./public/index.html",
-    "build": "parcel ./public/index.html"
+    "build": "parcel build ./public/index.html"
   },
   "keywords": [],
   "author": "",
